# OpenMusicBox

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  pyproject.toml
docs/: CONTRIBUTING_RU.md
